--- a/buildconf/flask.ini
+++ b/buildconf/flask.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 inherit = flask
-bin_name = testrunner
+bin_name = agent
 embed_files = bootstrap.py,main_flask.py,werkzeug=site-packages/werkzeug,jinja2=site-packages/jinja2,flask=site-packages/flask,flask_cors=site-packages/flask_cors,flask_swagger_ui=site-packages/flask_swagger_ui,py_eureka_client=site-packages/py_eureka_client,PyYAML=site-packages/PyYAML,psutil=site-packages/psutil,fluent-logger=site-packages/fluent-logger
 embed_config = flaskconfig.ini
 
