--- a/tests/rest_discovery_integration/input/alpineagent.yml
+++ b/tests/rest_discovery_integration/input/alpineagent.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   container:
-    image: dinutac/estuary-testrunner:latest
+    image: dinutac/estuary-agent:latest
     hostname: container
     #    entrypoint: tail -f /etc/alpine-release
     #    entrypoint: bash -c "/scripts/wait-for-it.sh -t 20 eureka-server:8080 -- echo \"eureka running\" && sleep 10 && python3 /scripts/main_flask.py"
@@ -9,11 +9,11 @@ services:
       limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
       EUREKA_SERVER: "{{eureka_server}}"
       APP_IP_PORT: "{{app_ip_port}}/docker/container/{{deployment_id}}"
-    volumes:
-      - type: volume
-        source: sharedcontent
-        target: /testrunnersources
-#      - ./inputs/variables:/variables
+    #    volumes:
+    #      - type: volume
+    #        source: sharedcontent
+    #        target: /agentsources
+    #      - ./inputs/variables:/variables
     #      - ./:/scripts/
     #      - ./tmp:/tmp
     #    ports:
@@ -21,13 +21,13 @@ services:
 
     expose:
       - "8080"
-volumes:
-  sharedcontent:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      #      device: /host_mnt/c/Users/catal/IdeaProjects/estuary-testrunner #on windows
-      device: /tmp #on linux
+#volumes:
+#  sharedcontent:
+#    driver: local
+#    driver_opts:
+#      o: bind
+#      type: none
+##      device: /host_mnt/c/Users/catal/IdeaProjects/estuary-agent #on windows
+#      device: /tmp #on linux
 
 
