--- a/inputs/templates/alpineagent.yml
+++ b/inputs/templates/alpineagent.yml
@@ -7,7 +7,7 @@ services:
     entrypoint: tail -f /etc/hostname
 
   agent:
-    image: dinutac/estuary-agent:latest
+    image: estuaryoss/agent:latest
     hostname: agent
     #    entrypoint: tail -f /etc/alpine-release
     #    entrypoint: bash -c "sleep 10 && /scripts/main_flask.py"
