--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-jinja2
-flask
+jinja2==2.11.2
+flask==1.1.2
 flask_cors
-PyYAML
-requests
-parameterized
+PyYAML==5.3.1
+requests==2.24.0
+parameterized==0.7.4
 python-coveralls
 pytest-cov
 requests_toolbelt
 py_eureka_client
-apscheduler
+apscheduler==3.6.3
 flask_swagger_ui
 flask-classful
 fluent-logger
 pyinstaller
 setuptools==44.0.0
+jproperties==2.1.0
 uwsgi
