--- a/.travis.yml
+++ b/.travis.yml
@@ -167,6 +167,7 @@ jobs:
       before_script:
         - docker pull alpine:3.9.4
         - docker pull mysql:5.6
+        - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker pull dinutac/estuary-agent:latest
         - docker tag dinutac/estuary-agent:latest estuaryoss/agent:latest # <-- remove this when migrating
         - docker pull dinutac/netflixoss-eureka:1.9.25
@@ -214,6 +215,7 @@ jobs:
       before_script:
         - docker pull alpine:3.9.4
         - docker pull mysql:5.6
+        - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker pull dinutac/estuary-agent:latest
         - docker tag dinutac/estuary-agent:latest estuaryoss/agent:latest #<- remove this when migrating
         - docker pull dinutac/estuary-discovery:latest
