--- a/.travis.yml
+++ b/.travis.yml
@@ -182,6 +182,8 @@ jobs:
         - EUREKA_SERVER_LOCAL=http://${IP_ADDR_ARRAY[0]}:8081/eureka/v2
         - echo "EUREKA_SERVER=$EUREKA_SERVER_LOCAL" >> .env
         - echo "APP_IP_PORT=${IP_ADDR_ARRAY[0]}:8080" >> .env
+        - echo "DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME" >> .env
+        - echo "DOCKERHUB_TOKEN=$DOCKERHUB_TOKEN" >> .env
         - cat .env
         - sleep 30
         - docker run -d
@@ -232,6 +234,8 @@ jobs:
         - EUREKA_SERVER_LOCAL=http://${IP_ADDR_ARRAY[0]}:8081/eureka/v2
         - echo "EUREKA_SERVER=$EUREKA_SERVER_LOCAL" >> .env
         - echo "APP_IP_PORT=${IP_ADDR_ARRAY[0]}:8080" >> .env
+        - echo "DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME" >> .env
+        - echo "DOCKERHUB_TOKEN=$DOCKERHUB_TOKEN" >> .env
         - cat .env
         - sleep 30
         - docker run -d
