--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ jobs:
         - pip3 install -r requirements.txt
         - pip3 install coveralls
       before_script:
-        - py.test $SCRIPTS_DIR/render_test.py --cov=rest/api/jinja2
+        - py.test $SCRIPTS_DIR/unit/render_test.py --cov=rest/api/jinja2
       script:
-        - python3 -m unittest discover . "render_test.py"
+        - python3 -m unittest discover . render_test.py"
       after_script:
         - coveralls
 
@@ -60,6 +60,7 @@ jobs:
         #  - ./ngrok.sh
         #  - sleep 3600
         - python3 -m unittest discover $SCRIPTS_DIR/rest_docker "*_test.py"
+        - python3 -m unittest discover tests/unit "*_test.py"
         - ls -lrt /tmp
         - ps -ef
 
