--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ jobs:
       before_script:
         - docker pull alpine:3.9.4
         - docker pull mysql:5.6
-        - pip install -r requirements.txt
+        - pip3 install -r requirements.txt
         - pyinstaller --onefile main_flask.py
         - ls -lrt dist
         - cp dist/main_flask main-linux
@@ -134,7 +134,7 @@ jobs:
         SCRIPTS_DIR: tests
       before_script:
         - docker pull alpine:3.10.2
-        - pip install -r requirements.txt
+        - pip3 install -r requirements.txt
         - pyinstaller --onefile main_flask.py
         - ls -lrt dist
         - cp dist/main_flask main-linux
