--- a/.travis.yml
+++ b/.travis.yml
@@ -169,10 +169,10 @@ jobs:
         - docker pull alpine:3.9.4
         - docker pull mysql:5.6
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
-        - docker pull dinutac/estuary-agent:latest
-        - docker tag dinutac/estuary-agent:latest estuaryoss/agent:latest # <-- remove this when migrating
-        - docker pull dinutac/netflixoss-eureka:1.9.25
-        - docker tag dinutac/netflixoss-eureka:1.9.25 estuaryoss/netflix-eureka:1.9.25 # <-- remove this when migrating
+        - docker pull estuaryoss/agent:latest
+        - docker tag estuaryoss/agent:latest estuaryoss/agent:latest # <-- remove this when migrating
+        - docker pull estuaryoss/netflix-eureka:1.10.5
+        - docker tag estuaryoss/netflix-eureka:1.10.5 estuaryoss/netflix-eureka:1.10.5
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -219,12 +219,12 @@ jobs:
         - docker pull alpine:3.9.4
         - docker pull mysql:5.6
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
-        - docker pull dinutac/estuary-agent:latest
-        - docker tag dinutac/estuary-agent:latest estuaryoss/agent:latest #<- remove this when migrating
-        - docker pull dinutac/estuary-discovery:latest
-        - docker tag dinutac/estuary-discovery:latest estuaryoss/discovery:latest #<- remove this when migrating
-        - docker pull dinutac/netflixoss-eureka:1.9.25
-        - docker tag  dinutac/netflixoss-eureka:1.9.25 estuaryoss/netflix-eureka:1.9.25 #<- remove this when migrating
+        - docker pull estuaryoss/agent:latest
+        - docker tag estuaryoss/agent:latest estuaryoss/agent:latest #<- remove this when migrating
+        - docker pull estuaryoss/discovery:latest
+        - docker tag estuaryoss/discovery:latest estuaryoss/discovery:latest #<- remove this when migrating
+        - docker pull estuaryoss/netflix-eureka:1.10.5
+        - docker tag  estuaryoss/netflix-eureka:1.10.5 estuaryoss/netflix-eureka:1.9.25 #<- remove this when migrating
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -295,7 +295,7 @@ jobs:
         ISOLATED: true
       before_script:
         - docker build -t estuaryoss/deployer:latest .
-        - docker tag estuaryoss/deployer:latest dinutac/estuary-deployer:latest #<-- remove this when migrated to the new org
+        - docker tag estuaryoss/deployer:latest estuaryoss/deployer:latest #<-- remove this when migrated to the new org
       script:
         - docker network create estuarydeployer_default
         - docker run -d
