made alpine image just for testing purpose

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-jinja2==2.11.3
-flask==1.1.2
+jinja2~=2.11.3
+flask~=1.1.2
 flask_cors
-PyYAML==5.4
-requests==2.24.0
-parameterized==0.7.4
+PyYAML~=5.4
+requests~=2.24.0
+parameterized~=0.7.4
 python-coveralls
 pytest-cov
 requests_toolbelt
-py_eureka_client==0.9.6
-apscheduler==3.6.3
+py_eureka_client==0.9.7
+apscheduler~=3.6.3
 flask_swagger_ui
 flask-classful
 fluent-logger
 pyinstaller
-setuptools==44.0.0
-jproperties==2.1.0
-psutil
-uwsgi
+setuptools==54.2.0
+jproperties~=2.1.0
+psutil~=5.8.0
+#uwsgi
