--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,13 @@ jobs:
         - pip3 install -r requirements.txt
         - pip3 install coveralls
       before_script:
-        - py.test $SCRIPTS_DIR/render_test.py --cov=rest/api/jinja2
+        - py.test tests/render_test.py --cov=rest/api/jinja2
       script:
-        - python3 -m unittest discover . render_test.py"
+        - python3 -m unittest discover tests "render_test.py"
       after_script:
         - coveralls
 
-    #run executable tests - docker
+    #run executable tests - VM
     - language: python
       python: 3.6
       services: docker
@@ -64,32 +64,32 @@ jobs:
         - ls -lrt /tmp
         - ps -ef
 
-    #run docker tests - docker sock mount
-    - language: python
-      python: 3.6
-      services:
-        - docker
-      env:
-        MAX_DEPLOYMENTS: 3
-        SCRIPTS_DIR: tests
-        ISOLATED: true
-      before_script:
-        - docker pull alpine:3.9.4
-        - docker pull mysql:5.6
-        - docker build -t estuaryoss/deployer:latest .
-      script:
-        - docker network create estuarydeployer_default
-        - docker run -d
-          -e MAX_DEPLOYMENTS=$MAX_DEPLOYMENTS
-          -p 8080:8080
-          -v $PWD/inputs/templates:/scripts/inputs/templates
-          -v $PWD/inputs/variables:/scripts/inputs/variables
-          -v /var/run/docker.sock:/var/run/docker.sock
-          --net=estuarydeployer_default
-          --name estuary-deployer
-          estuaryoss/deployer:latest
-        - sleep 10
-        - python3 -m unittest discover $SCRIPTS_DIR/rest_docker "*_test.py"
+#    #run docker tests - docker sock mount
+#    - language: python
+#      python: 3.6
+#      services:
+#        - docker
+#      env:
+#        MAX_DEPLOYMENTS: 3
+#        SCRIPTS_DIR: tests
+#        ISOLATED: true
+#      before_script:
+#        - docker pull alpine:3.9.4
+#        - docker pull mysql:5.6
+#        - docker build -t estuaryoss/deployer:latest .
+#      script:
+#        - docker network create estuarydeployer_default
+#        - docker run -d
+#          -e MAX_DEPLOYMENTS=$MAX_DEPLOYMENTS
+#          -p 8080:8080
+#          -v $PWD/inputs/templates:/scripts/inputs/templates
+#          -v $PWD/inputs/variables:/scripts/inputs/variables
+#          -v /var/run/docker.sock:/var/run/docker.sock
+#          --net=estuarydeployer_default
+#          --name estuary-deployer
+#          estuaryoss/deployer:latest
+#        - sleep 10
+#        - python3 -m unittest discover $SCRIPTS_DIR/rest_docker "*_test.py"
 
     #run docker tests - docker sock mount CENTOS
     - language: python
@@ -109,7 +109,7 @@ jobs:
         - docker pull centos:8
         - docker pull mysql:5.6
         - docker pull alpine:3.9.4
-        - docker build -t estuaryoss/deployer-centos:latest -f Dockerfile_centos .
+        - docker build -t estuaryoss/deployer:latest -f Dockerfile .
       script:
         - docker network create estuarydeployer_default
         - docker run -d
@@ -120,7 +120,7 @@ jobs:
           -v /var/run/docker.sock:/var/run/docker.sock
           --net=estuarydeployer_default
           --name estuary-deployer
-          estuaryoss/deployer-centos:latest
+          estuaryoss/deployer:latest
         - sleep 10
         - python3 -m unittest discover $SCRIPTS_DIR/rest_docker "*_test.py"
 
@@ -141,7 +141,7 @@ jobs:
         - chmod +x main-linux
         - sudo chown -R travis:travis inputs
         - ls -lrt
-        - curl -Lo kind https://github.com/kubernetes-sigs/kind/releases/download/v0.9.0/kind-linux-amd64 && chmod +x kind && sudo mv kind /usr/local/bin/
+        - curl -Lo kind https://github.com/kubernetes-sigs/kind/releases/download/v0.10.0/kind-linux-amd64 && chmod +x kind && sudo mv kind /usr/local/bin/
         - kind create cluster
         - curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
       script:
@@ -169,10 +169,8 @@ jobs:
         - docker pull alpine:3.9.4
         - docker pull mysql:5.6
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
-        - docker pull estuaryoss/agent:latest
-        - docker tag estuaryoss/agent:latest estuaryoss/agent:latest # <-- remove this when migrating
+        - docker pull estuaryoss/agent-go:latest
         - docker pull estuaryoss/netflix-eureka:1.10.5
-        - docker tag estuaryoss/netflix-eureka:1.10.5 estuaryoss/netflix-eureka:1.10.5
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -220,11 +218,8 @@ jobs:
         - docker pull mysql:5.6
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker pull estuaryoss/agent:latest
-        - docker tag estuaryoss/agent:latest estuaryoss/agent:latest #<- remove this when migrating
         - docker pull estuaryoss/discovery:latest
-        - docker tag estuaryoss/discovery:latest estuaryoss/discovery:latest #<- remove this when migrating
         - docker pull estuaryoss/netflix-eureka:1.10.5
-        - docker tag  estuaryoss/netflix-eureka:1.10.5 estuaryoss/netflix-eureka:1.9.25 #<- remove this when migrating
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
