--- a/.travis.yml
+++ b/.travis.yml
@@ -171,6 +171,7 @@ jobs:
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker pull estuaryoss/agent-go:latest
         - docker pull estuaryoss/netflix-eureka:1.10.5
+        - pyinstaller -onefile --clean main_flask.py
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -220,6 +221,7 @@ jobs:
         - docker pull estuaryoss/agent:latest
         - docker pull estuaryoss/discovery:latest
         - docker pull estuaryoss/netflix-eureka:1.10.5
+        - pyinstaller --onefile --clean main_flask.py
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -264,6 +266,7 @@ jobs:
         MAX_DEPLOYMENTS: 3
         SCRIPTS_DIR: tests
       before_script:
+        - pyinstaller --onefile --clean main_flask.py
         - docker build -t estuaryoss/deployer:latest .
       script:
         - docker network create estuarydeployer_default
@@ -289,6 +292,7 @@ jobs:
         DOCKER_SCRIPTS_DIR: /scripts
         ISOLATED: true
       before_script:
+        - pyinstaller --onefile --build main_flask.py
         - docker build -t estuaryoss/deployer:latest .
         - docker tag estuaryoss/deployer:latest estuaryoss/deployer:latest #<-- remove this when migrated to the new org
       script:
